Closed Bug 738740 Opened 13 years ago Closed 13 years ago

Code from bug 737434 doesn't compile with clang

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: bzbarsky, Assigned: cwiiis)

References

Details

Attachments

(1 file)

../../../mozilla/gfx/gl/GLContext.cpp:1188:45: error: taking the address of a temporary object of type 'already_AddRefed<mozilla::gl::TextureImage>' [-Waddress-of-temporary] mImages.ReplaceElementAt(i, &teximg.forget()); ^~~~~~~~~~~~~~~~
I've not finished a build yet, but the patch is quite trivial so uploading for review now.
Attachment #608808 - Flags: review?(bzbarsky)
Comment on attachment 608808 [details] [diff] [review] Fix nsTArray::ReplaceElementAt method Oy. r=me
Attachment #608808 - Flags: review?(bzbarsky) → review+
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: