Bug 738740 - Fix handling of parameters in nsTArray::ReplaceElementAt. r=bz

Handle the parameters given to ReplaceElementAt the same way as those given to
other methods in the class. This allows removal of the & in GLContext.cpp that
was taking the address of a temporary, and causing a build error when using
clang, or when using GCC with particular parameters.